<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SubjectSelectionActivity"
    xmlns:app ="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@+id/subject_selection_title_layout"
        layout="@layout/include_title_backbtn_layout"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_21">
        <RelativeLayout
            android:id="@+id/subject_selection_user_layout"
            android:layout_width="295dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_subject_selection_user">
            <ImageView
                android:id="@+id/subject_selection_user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="213dp"
                android:src="@drawable/icon_subject_selection_user"/>
            <TextView
                android:id="@+id/subject_selection_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/subject_selection_user_img"
                android:layout_marginTop="8dp"
                android:text="@string/subject_selection_user"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/subject_selection_user_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subject_selection_user_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="user123"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subject_selection_title_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:background="@drawable/bg_subject_selection_title"
            android:layout_toRightOf="@id/subject_selection_user_layout"
            android:paddingLeft="@dimen/dp_23"
            android:layout_marginLeft="@dimen/dp_20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/subject_selection_junior"
                android:textColor="@color/exam_setting_title_color"
                android:textSize="@dimen/sp_17" />


        </RelativeLayout>
        <!--物理-->
        <com.learn.all_electric.view.SubjectView
            android:id="@+id/subject_selection_physical_tx"
            android:layout_width="305dp"
            android:layout_height="@dimen/dp_140"
            android:layout_below="@id/subject_selection_title_layout"
            android:layout_toRightOf="@id/subject_selection_user_layout"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            app:content_img="@drawable/icon_subject_selection_physical"
            app:content_text="@string/subject_selection_physical"
            app:content_text_color="@color/exam_setting_title_color">
        </com.learn.all_electric.view.SubjectView>

        <!--化学-->
        <com.learn.all_electric.view.SubjectView
            android:id="@+id/subject_selection_chemical_tx"
            android:layout_width="305dp"
            android:layout_height="@dimen/dp_140"
            android:layout_below="@id/subject_selection_title_layout"
            android:layout_toRightOf="@id/subject_selection_physical_tx"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            app:content_img="@drawable/icon_subject_selection_chemical"
            app:content_text="@string/subject_selection_chemical"
            app:content_text_color="@color/exam_setting_title_color">
        </com.learn.all_electric.view.SubjectView>

        <!--生物-->
        <com.learn.all_electric.view.SubjectView
            android:id="@+id/subject_selection_biological_tx"
            android:layout_width="305dp"
            android:layout_height="@dimen/dp_140"
            android:layout_below="@id/subject_selection_physical_tx"
            android:layout_toRightOf="@id/subject_selection_user_layout"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            app:content_img="@drawable/icon_subject_selection_biological"
            app:content_text="@string/subject_selection_biological"
            app:content_text_color="@color/exam_setting_title_color">
        </com.learn.all_electric.view.SubjectView>
    </RelativeLayout>

</LinearLayout>