<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExamRoomSettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exam_setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:text="@string/app_name"
            android:textColor="@color/exam_setting_title_color"
            android:textSize="@dimen/sp_18" />


        <Button
            android:id="@+id/logout"
            android:layout_width="68dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_28"
            android:background="@drawable/seletor_btn"
            android:text="@string/exam_settings_logout"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/white" />
        <ImageView
            android:id="@+id/setting_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/logout"
            android:src="@drawable/icon_setting"
            android:visibility="visible"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_24">
        <RelativeLayout
            android:id="@+id/exam_admin_layout"
            android:layout_width="400dp"
            android:layout_height="142dp"
            android:background="@drawable/bg_examroom_admin">
            <ImageView
                android:id="@+id/exam_admin_img"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_14"
                android:src="@drawable/icon_examroom_admin"/>
            <TextView
                android:id="@+id/exam_admin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/exam_admin_img"
                android:layout_marginTop="6dp"
                android:text="@string/exam_settings_admin"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/exam_admin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/exam_admin_title"
                android:layout_marginTop="2dp"
                android:text="admin"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/exam_room_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="144dp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_alignLeft="@id/exam_admin_layout"
            android:layout_alignRight="@id/exam_admin_layout"
            android:paddingLeft="@dimen/dp_21"
            android:layout_below="@id/exam_admin_layout"
            android:background="@drawable/shape_white_radius_bg">
            <!--考场信息-->
            <TextView
                android:id="@+id/exam_setting_room_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/exam_settings_room_info_title"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/exam_setting_seat_title_color"/>
            <!--考试名称-->
            <TextView
                android:id="@+id/exam_setting_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exam_setting_room_info_title"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_4"
                android:text="@string/exam_settings_name_title"
                android:textColor="@color/exam_setting_title_color"
                android:textSize="@dimen/text_size_15sp" />
            <TextView
                android:id="@+id/exam_setting_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exam_setting_room_info_title"
                android:layout_toRightOf="@id/exam_setting_name_title"
                android:layout_marginTop="@dimen/dp_15"
                android:text="广东省肇庆市端州区2020物理实验操作考试"
                android:textColor="@color/exam_setting_title_color"
                android:textSize="@dimen/text_size_15sp" />
            <!--考试学校-->
            <TextView
                android:id="@+id/exam_setting_school_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exam_setting_name_title"
                android:layout_marginTop="@dimen/dp_11"
                android:layout_marginRight="@dimen/dp_3"
                android:text="@string/exam_settings_school_title"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/exam_setting_title_color"/>
            <TextView
                android:id="@+id/exam_setting_school_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exam_setting_name_txt"
                android:layout_toRightOf="@id/exam_setting_school_title"
                android:layout_marginTop="@dimen/dp_11"
                android:text="第九实验中学"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/exam_setting_title_color"/>
            <!--考场编号-->
            <TextView
                android:id="@+id/exam_setting_roomnum_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exam_setting_school_title"
                android:layout_marginTop="@dimen/dp_11"
                android:layout_marginRight="@dimen/dp_4"
                android:text="@string/exam_settings_room_num_title"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/exam_setting_title_color"/>
            <TextView
                android:id="@+id/exam_setting_roomnum_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exam_setting_school_title"
                android:layout_toRightOf="@id/exam_setting_roomnum_title"
                android:layout_marginTop="@dimen/dp_11"
                android:text="1"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/exam_setting_title_color"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/exam_setting_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/exam_room_info_layout"
            android:layout_alignRight="@id/exam_room_info_layout"
            android:background="@drawable/examroom_image"
            android:layout_marginTop="@dimen/dp_21"
            android:layout_below="@id/exam_room_info_layout"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_21"
            android:layout_toRightOf="@id/exam_admin_layout"
            android:layout_alignTop="@id/exam_admin_layout"
            android:layout_alignBottom="@id/exam_setting_img"
            android:background="@drawable/shape_white_radius_bg">

            <TextView
                android:id="@+id/choose_seat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_21"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/exam_settings_seat_title"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/exam_setting_seat_title_color"/>
            <Button
                android:id="@+id/exam_setting_submit_seat_btn"
                android:layout_width="@dimen/dp_280"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_27"
                android:background="@drawable/seletor_btn"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15sp"/>
            <LinearLayout
                android:id="@+id/choose_seat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/exam_setting_submit_seat_btn"
                android:layout_marginBottom="@dimen/dp_11"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_settings_choice_seat_title"
                    android:textSize="@dimen/text_size_15sp"
                    android:textColor="@color/exam_setting_title_color"/>
                <TextView
                    android:id="@+id/exam_setting_choose_seat_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:text="一排2位"
                    android:textSize="@dimen/text_size_15sp"
                    android:textColor="@color/exam_setting_title_color"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/exam_room_recycler_seat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_22"
                android:layout_marginTop="@dimen/dp_22"
                android:layout_below="@id/choose_seat_title"
                android:layout_above="@id/choose_seat_layout"
                android:layout_gravity="center"
                android:overScrollMode="never"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>